<!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Inventory</string>
    <string name="sell">Sell</string>
    <string name="quantity">Quantity in Stock:</string>
    <string name="save_action">Save</string>
    <string name="item_detail_fragment_title">Item Details</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="quantity_in_stock">Quantity\nIn Stock</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="currency_symbol">$</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_new_item">Add new item</string>

    <string name="alarm_date">Tanggal <font color='#FF0000'>*</font></string>
    <string name="jumlah_ayam">Jumlah Ayam <font color='#FF0000'>*</font></string>
    <string name="jumlah_telur">Jumlah Telur <font color='#FF0000'>*</font></string>
    <string name="harga_telur">Harga Telur <font color='#FF0000'>*</font></string>
    <string name="makanan_kg">Makanan(kg) <font color='#FF0000'>*</font></string>
    <string name="makanan_rp">Makanan(rp) <font color='#FF0000'>*</font></string>
    <string name="keterangan">Keterangan <font color='#FF0000'></font></string>

    <string name="Tanggal">Tanggal</string>
    <string name="Jumlah_ayam">Jumlah Ayam</string>
    <string name="Jumlah_telur">Jumlah Telur</string>
    <string name="persen_telur">% Telur</string>
    <string name="penjualan_telur">Penjualan Telur</string>
    <string name="makanan_kg_rp">Makanan (Kg * Rp)</string>
    <string name="Keterangan">Keterangan</string>

    <string name="Jumlah_ayam2">Jumlah Ayam : </string>
    <string name="Jumlah_telur2">Jumlah Telur : </string>
    <string name="Persen_telur2">Persen Telur : </string>
    <string name="Penjualan_telur2">Penjualan Telur : </string>
    <string name="Makanan">Makanan (Kg * Rp) : </string>
    <string name="Keterangan2">Keterangan : </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rp">Rp</string>
</resources>
