<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    tools:context=".ItemDetailFragment">

    <TextView
        android:id="@+id/tv_once_date"
        style="@style/Widget.Inventory.TextView"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="01-01-2021" />

    <TextView
        android:id="@+id/jumlah_ayam_label"
        style="@style/Widget.Inventory.TextView"
        android:layout_width="wrap_content"
        android:text="@string/Jumlah_ayam2"
        app:layout_constraintBaseline_toBaselineOf="@+id/jumlah_ayam"
        app:layout_constraintEnd_toStartOf="@+id/jumlah_ayam"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/jumlah_ayam"
        style="@style/Widget.Inventory.TextView"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintStart_toEndOf="@id/jumlah_ayam_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_once_date"
        tools:text="1080" />

    <TextView
        android:id="@+id/jumlah_telur_label"
        style="@style/Widget.Inventory.TextView"
        android:layout_width="wrap_content"
        android:text="@string/Jumlah_telur2"
        app:layout_constraintBaseline_toBaselineOf="@+id/jumlah_telur"
        app:layout_constraintEnd_toStartOf="@+id/jumlah_telur"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/jumlah_telur"
        style="@style/Widget.Inventory.TextView"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintStart_toEndOf="@id/jumlah_telur_label"
        app:layout_constraintTop_toBottomOf="@+id/jumlah_ayam"
        tools:text="1080" />

    <TextView
        android:id="@+id/persen_telur_label"
        style="@style/Widget.Inventory.TextView"
        android:layout_width="wrap_content"
        android:text="@string/Persen_telur2"
        app:layout_constraintBaseline_toBaselineOf="@+id/persen_telur"
        app:layout_constraintEnd_toStartOf="@+id/persen_telur"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/persen_telur"
        style="@style/Widget.Inventory.TextView"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/margin_between_elements"
        android:layout_marginTop="@dimen/margin"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/persen_telur_label"
        app:layout_constraintTop_toBottomOf="@+id/jumlah_telur"
        tools:text="88.89%" />

    <TextView
        android:id="@+id/penjualan_telur_label"
        style="@style/Widget.Inventory.TextView"
        android:layout_width="wrap_content"
        android:text="@string/Penjualan_telur2"
        app:layout_constraintBaseline_toBaselineOf="@+id/penjualan_telur"
        app:layout_constraintEnd_toStartOf="@+id/penjualan_telur"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/penjualan_telur"
        style="@style/Widget.Inventory.TextView"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/margin_between_elements"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/penjualan_telur_label"
        app:layout_constraintTop_toBottomOf="@+id/persen_telur"
        tools:text="Rp 1500000" />

    <TextView
        android:id="@+id/makanan_rp_kg_label"
        style="@style/Widget.Inventory.TextView"
        android:layout_width="wrap_content"
        android:text="@string/Makanan"
        app:layout_constraintBaseline_toBaselineOf="@+id/makanan_rp_kg"
        app:layout_constraintEnd_toStartOf="@+id/makanan_rp_kg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/makanan_rp_kg"
        style="@style/Widget.Inventory.TextView"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/margin_between_elements"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/makanan_rp_kg_label"
        app:layout_constraintTop_toBottomOf="@+id/penjualan_telur"
        tools:text="Rp 812555" />

    <TextView
        android:id="@+id/keterangan_label"
        style="@style/Widget.Inventory.TextView"
        android:layout_width="wrap_content"
        android:text="@string/Keterangan2"
        app:layout_constraintBaseline_toBaselineOf="@+id/keterangan"
        app:layout_constraintEnd_toStartOf="@+id/keterangan"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/keterangan"
        style="@style/Widget.Inventory.TextView"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/margin_between_elements"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/keterangan_label"
        app:layout_constraintTop_toBottomOf="@+id/makanan_rp_kg"
        tools:text="88.74%" />

    <Button
        android:id="@+id/delete_item"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keterangan" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_between_elements"
        android:layout_marginBottom="@dimen/margin_between_elements"
        android:contentDescription="@string/edit_item"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>
